# LLM_Fine_Tunning

./: Dockerfile  LICENSE  Makefile  PROJECT_DESCRIPTION.txt  README.md  pyproject.toml  requirements.txt
app/: main.py  model_service.py  schemas.py
configs/: train_cpu_demo.yaml  train_qlora.yaml
data/raw/: sample_instructions.jsonl
docs/: engineering_notes.md
scripts/: chat.py  evaluate.py  prepare_data.py  train.py
src/llm_finetuning/: config.py  data.py  evaluation.py  modeling.py  prompts.py
tests/: test_data.py  test_prompts.py
